<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/popup_text" >
        <TextView
            android:id="@+id/space"
            android:layout_width="fill_parent"
            android:layout_height="30dip" />

        <TableLayout
            android:id="@+id/table_layout2"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/space"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:focusable="true"
            android:padding="5dp"
            android:focusableInTouchMode="true"
            android:nextFocusDown="@+id/big_signin"
            android:orientation="horizontal"
            android:stretchColumns="1" >

            <TextView
                android:id="@+id/create_acc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/edit_info"
                android:textColor="@color/coffee"
                android:textSize="24sp" />

            <TableRow
                android:id="@+id/tablerow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@drawable/text_field_single"
                android:gravity="center"
                android:padding="7dip" >

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hint_name"
                    android:background="@android:color/transparent"
                    android:cursorVisible="true"
                    android:imeOptions="actionNext"
                    android:maxLength="32"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

            </TableRow>

            <TableRow
                android:id="@+id/tablerow2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@drawable/text_field_single"
                android:gravity="center"
                android:padding="7dip" >
            <EditText
                    android:id="@+id/et_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hint_email"
                    android:background="@android:color/transparent"
                    android:cursorVisible="true"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLength="32"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" >

                </EditText>
</TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_field_single"
                android:gravity="center"
                android:layout_marginTop="10dip"
                android:padding="7dip" >

                <EditText
                    android:id="@+id/et_phno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hint_phno"
                    android:background="@android:color/transparent"
                    android:cursorVisible="true"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:maxLength="32"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />
            </TableRow>


        </TableLayout>


        <Button
            android:id="@+id/bt_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/table_layout2"
            android:layout_alignRight="@+id/table_layout2"
            android:layout_below="@+id/table_layout2"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dip"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:background="@drawable/register_button"
            android:gravity="center"
            android:text="@string/save"
            android:imeOptions="actionDone"
            android:textColor="@color/white"
            android:textSize="20sp" />

 <TextView
     android:layout_below="@+id/bt_save"
            android:layout_width="fill_parent"
            android:layout_height="40dip" />

</RelativeLayout>